--- a/PortfolioBuilder/templates/home.html
+++ b/PortfolioBuilder/templates/home.html
@@ -17,11 +17,11 @@ Home
             {% if user.is_authenticated %}
             <a href="{%url 'Home:get_details_form' %}"><button type="button" class="btn btn-primary btn-lg">Get started for free</button></a>
             {% else %}
-            <a href="{%url 'account_signup' %}"><button type="button" class="btn btn-primary btn-lg">Get started</button></a>
+            <a href="{%url 'account_signup' %}"><button type="button" class="btn btn-primary btn-lg">Get started for free</button></a>
             {% endif %}
           </div>
           <div class="col-md-6">
-            <img src="{%static 'img1.png' %}" alt="Image" class="img-fluid">
+            <img src="{%static 'Home.jpg' %}" alt="Image" class="img-fluid">
           </div>
         </div>
       </div>
