--- a/PortfolioBuilder/templates/project_details.html
+++ b/PortfolioBuilder/templates/project_details.html
@@ -1,48 +1,36 @@
 {% extends 'base.html' %}
 {%load static%}
+{% block title %}
+Experience Details
+{% endblock %}
 
 {% block content %}
+<link rel="stylesheet"href={%static 'home.css' %}></link>
 
-<link rel="stylesheet"href="{% static 'home.css' %}"></link>
-
-<div class="container">
+<div class="container mb-3" style="margin-top:20px;">
+    <div class="card-header bg-info mt-2"><strong>Your added projects</strong></div>
     <div class="row">
-        <div class="col-md-6">
-            <h2>Project Details</h2>
-            <p>Please review the details below:</p>
-            <table class="table">
-                <tbody>
-                    <tr>
-                        <th>First Name:</th>
-                        <td>John</td>
-                    </tr>
-                    <tr>
-                        <th>Last Name:</th>
-                        <td>Doe</td>
-                    </tr>
-                    <tr>
-                        <th>Email:</th>
-                        <td>john.doe@example.com</td>
-                    </tr>
-                    <tr>
-                        <th>Mobile No:</th>
-                        <td>1234567890</td>
-                    </tr>
-                    <tr>
-                        <th>Place:</th>
-                        <td>New York</td>
-                    </tr>
-                    
-                </tbody>
-            </table>
-            <a href="{%url 'Home:add_project_form'%}"><button type="button" class="btn btn-primary mx-2">Update</button></a>
-            <a href="{%url 'Home:add_skills_form'%}"><button type="button" class="btn btn-primary">Save and create portfolio</button></a>
-          
+        {% for project in project_details %}
+        <div class="col-sm-4 mt-3 mb-2">
+
+                <div class="card p-2 bg-white  font-weight-bolder">
+                    <div class="card-header bg-light">{{project.project_name}}</div>
+                    <div class="card-body text-center text-dark">
+                        <div class="card-header bg-light">{{project.project_start_date}}</div>
+                      <p class="card-text">{{project.project_start_date}}-{% if project.project_end_date == None %} present {% else %} {{project.project_end_date}} {% endif %} </p>
+                        <p class="card-text">{{project.project_desc}}</p>
+                    </div>
+                    {% comment %} <a class="btn mx-auto btn-outline-dark" href="{% url 'home:update-experience' slug details.organisation_name %}" >edit</a> {% endcomment %}
+                    {% comment %} <a class="btn mx-auto  btn-outline-dark" href="{% url 'home:delete-experience' slug details.organisation_name %}" >delete</a> {% endcomment %}
+                </div>
+
         </div>
+        {% endfor %}
+
     </div>
+    <a href="{% url 'Home:add_project_form' slug %}" class="button btn-primary">Add project</a>
+    <a href="{% url 'Home:add_project_form' slug %}" class="button btn-primary">Create portfolio</a>
+    {% comment %} <a href="{% url 'home:create' slug %}" class="button btn-warning">Create Portfolio</a> {% endcomment %}
+
 </div>
-  
-
-
-
 {% endblock %}
