--- a/PortfolioBuilder/templates/home.html
+++ b/PortfolioBuilder/templates/home.html
@@ -1,19 +1,23 @@
 {% extends 'base.html' %}
-{%load static %}
-{%block title%}
+{% load static %}
+{% block title %}
 Home
-{%endblock title%}
-{%block content%}
+{% endblock title %}
+{% block content %}
 <div class="clearfix">
-    <link rel="stylesheet"href="{% static 'home.css' %}"></link>
+    <link rel="stylesheet" href="{% static 'home.css' %}"></link>
     <div class="container">
         <div class="row">
           <div class="col-md-6">
             <!-- <h2>Create a professional portfolio website without code</h2> -->
-            <h2>Create a <span style="color: #FF416C;">professional</span> portfolio website without code</h2>
-
-            
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus sapien eget nisi malesuada sodales. Fusce ac felis ipsum. Duis at ante neque. Vivamus ut diam vel ex tristique congue ut a mauris.</p>
+            {% comment %} <h2>Create a <span style="color: #FF416C; display: block;">professional</span><span style="display: block;">portfolio</span> website without code</h2> {% endcomment %}
+            <h2>
+              <strong style="font-weight: bold; font-size: 70px; line-height: 65px; display: block;">Build your</strong>
+              <strong style="font-weight: bold; font-size: 70px; line-height: 65px; display: block;">online presence</strong>
+ 
+              <strong style="font-weight: bold; font-size: 70px; line-height: 65px; display: block;">with <span style="color: #FF416C; display: block;">Portify.</span></strong>
+            </h2>           
+            <p style="font-size: 18px; color: #666666;">Create a stunning portfolio website by providing your skills, experience, and qualifications. Impress potential employers and clients with just a few clicks.</p>
             {% if user.is_authenticated %}
             <a href="{%url 'Home:get_details_form' %}"><button type="button" class="btn btn-primary btn-lg">Get started for free</button></a>
             {% else %}
@@ -25,15 +29,18 @@ Home
           </div>
         </div>
       </div>
-
+      <div class="container"style="padding:50px;">
+      {% comment %} <h2 style="text-align:center;font-weight:bold;">Here's how it works?</h2> {% endcomment %}
+      <strong style="font-weight: bold; font-size: 50px; line-height: 65px; display: block;text-align:center;">Here's how it works</strong>
+    </div>
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img src="{%static 'img1.png' %}" alt="Image" class="img-fluid">
+            <img src="{%static 'account.jpg' %}" alt="Image" class="img-fluid">
           </div>
           <div class="col-md-6">
-            <h1>Heading</h1>
-            <h2>Subheading</h2>
+           
+            <h2>Create an account on Portify</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce imperdiet elit nec nunc auctor, eget sagittis tellus ullamcorper. Sed ac velit vel lacus sollicitudin placerat. Nam consequat sapien id bibendum venenatis. Sed sagittis neque sed libero blandit cursus. Aenean porta, eros ac volutpat commodo, enim felis vulputate est, sit amet euismod ante ipsum vitae velit. Integer eu arcu leo. Sed vitae enim varius, pulvinar turpis sit amet, consectetur nibh. Etiam in orci at enim pharetra feugiat ac et dolor. Curabitur consequat, quam vitae ullamcorper placerat, eros sem malesuada arcu, ut scelerisque augue velit eu sapien.</p>
           </div>
         </div>
@@ -42,11 +49,10 @@ Home
       <div class="container">
         <div class="row">
           <div class="col-md-6 order-md-2">
-            <img src="{%static 'img1.png' %}" alt="Image" class="img-fluid">
+            <img src="{%static 'details.jpg' %}" alt="Image" class="img-fluid">
           </div>
           <div class="col-md-6 order-md-1">
-            <h1>Heading</h1>
-            <h2>Subheading</h2>
+            <h2>Provide us your details</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce imperdiet elit nec nunc auctor, eget sagittis tellus ullamcorper. Sed ac velit vel lacus sollicitudin placerat. Nam consequat sapien id bibendum venenatis. Sed sagittis neque sed libero blandit cursus. Aenean porta, eros ac volutpat commodo, enim felis vulputate est, sit amet euismod ante ipsum vitae velit. Integer eu arcu leo. Sed vitae enim varius, pulvinar turpis sit amet, consectetur nibh. Etiam in orci at enim pharetra feugiat ac et dolor. Curabitur consequat, quam vitae ullamcorper placerat, eros sem malesuada arcu, ut scelerisque augue velit eu sapien.</p>
           </div>
         </div>
@@ -55,43 +61,70 @@ Home
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img src="{%static 'img1.png' %}" alt="Image" class="img-fluid">
+            <img src="{%static 'track.jpg' %}" alt="Image" class="img-fluid">
           </div>
           <div class="col-md-6">
-            <h1>Heading</h1>
-            <h2>Subheading</h2>
+            <h2>Track portfolios and share them accordingly</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce imperdiet elit nec nunc auctor, eget sagittis tellus ullamcorper. Sed ac velit vel lacus sollicitudin placerat. Nam consequat sapien id bibendum venenatis. Sed sagittis neque sed libero blandit cursus. Aenean porta, eros ac volutpat commodo, enim felis vulputate est, sit amet euismod ante ipsum vitae velit. Integer eu arcu leo. Sed vitae enim varius, pulvinar turpis sit amet, consectetur nibh. Etiam in orci at enim pharetra feugiat ac et dolor. Curabitur consequat, quam vitae ullamcorper placerat, eros sem malesuada arcu, ut scelerisque augue velit eu sapien.</p>
           </div>
         </div>
       </div>
       <div class="container">
-      <div style="max-width: 600px; margin: 0 auto;">
-        <h2 style="text-align: center;">Example of portfolios</h2>
-        <p style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus sapien eget nisi malesuada sodales. Fusce ac felis ipsum. Duis at ante neque. Vivamus ut diam vel ex tristique congue ut a mauris.</p>
-      
-        <div style="position: relative; overflow: hidden; border-radius: 20px; box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);">
-          <div style="display: flex; width: 100%; animation: slide 20s linear infinite;">
-            <img src="{%static 'img1.png' %}" alt="Image" class="img-fluid">
-            <img src="{%static 'img1.png' %}" alt="Image" class="img-fluid">
-            <img src="{%static 'img1.png' %}" alt="Image" class="img-fluid">
-            
+        <div class="row">
+          <div class="col-md-6 order-md-2">
+            <img src="{%static 'share.jpg' %}" alt="Image" class="img-fluid">
+          </div>
+          <div class="col-md-6 order-md-1">
+            <h2>Share them with recruiters</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce imperdiet elit nec nunc auctor, eget sagittis tellus ullamcorper. Sed ac velit vel lacus sollicitudin placerat. Nam consequat sapien id bibendum venenatis. Sed sagittis neque sed libero blandit cursus. Aenean porta, eros ac volutpat commodo, enim felis vulputate est, sit amet euismod ante ipsum vitae velit. Integer eu arcu leo. Sed vitae enim varius, pulvinar turpis sit amet, consectetur nibh. Etiam in orci at enim pharetra feugiat ac et dolor. Curabitur consequat, quam vitae ullamcorper placerat, eros sem malesuada arcu, ut scelerisque augue velit eu sapien.</p>
           </div>
         </div>
       </div>
-    </div>
-      <footer class="text-center text-lg-start">
-        <!-- Copyright -->
-        <div class="text-center p-3">
-          © 2023 Copyright:Build It
-          <!-- <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a> -->
-        </div>
-        <!-- Copyright -->
-      </footer>
+
+      <style>
+        /* CSS for the footer */
+        body {
+          margin: 0;
+          padding: 0;
+          display: flex;
+          flex-direction: column;
+          min-height: 100vh;
+        }
       
+        main {
+          flex: 1;
+        }
       
-     
+        footer {
+          
+          text-align: center;
+          padding: 20px;
+          width: 100%;
+          box-sizing: border-box;
+        }
       
+        footer p {
+          margin-bottom: 10px;
+        }
+      </style>
+      <div class="container">
+        <footer>
+          <p>&copy; 2023 Your Website. All rights reserved.</p>
+        </footer>
+      </div>
       
-      
-      
-{%endblock content%}
+
+    
+
+
+
+
+
+
+
+
+
+
+
+
+{% endblock content %}
