--- a/PortfolioBuilder/templates/account/signup.html
+++ b/PortfolioBuilder/templates/account/signup.html
@@ -8,25 +8,35 @@
     <div class="container">
         <link rel="stylesheet" href="{% static 'home.css' %}">
         <div class="row">
-            <div class="col-md-6 offset-md-3 mt-0x"> <!-- Increase the margin-top value to move the form up -->
+            <div class="col-md-8 offset-md-2 mt-0x"> <!-- Increase the margin-top value to move the form up -->
                 <div style="box-shadow: 0 0 15px rgba(0, 0, 0, 0.2); padding: 20px;">
-                    <h1 class="text-2xl my-4">Sign up</h1>
-                    <form method="POST">
-                        {% csrf_token %}
-                        {{ form|crispy }}
-                        <div class="text-center">
-                            <div class="d-grid gap-2 col-6 mx-auto">
-                                <button type="submit" class="btn btn-signup">Sign up</button>
-                            </div>
-                            <div class="or-divider my-3">
-                                <span class="or-text">or</span>
-                            </div>
-                            <a href="{% provider_login_url 'google' %}" class="btn btn-google">
-                                <img src="{% static 'google_logo.png' %}" alt="Google Logo" class="btn-google-icon">
-                                Sign up with Google
-                            </a>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h1 class="text-2xl my-4">Welcome to Portify</h1>
+                            <form method="POST">
+                                {% csrf_token %}
+                                {{ form|crispy }}
+                                <div class="text-center">
+                                    <div class="d-grid gap-2 col-6 mx-auto">
+                                        <button type="submit" class="btn btn-signup">Sign up</button>
+                                    </div>
+                                    <div class="or-divider my-3">
+                                        <span class="or-text">or</span>
+                                    </div>
+                                    <a href="{% provider_login_url 'google' %}" class="btn btn-google">
+                                        <img src="{% static 'google_logo.png' %}" alt="Google Logo" class="btn-google-icon">
+                                        Sign up with Google
+                                    </a>
+                                </div>
+                            </form>
                         </div>
-                    </form>
+                        <div class="col-md-6 d-flex align-items-center justify-content-center">
+                            <div>
+                                <img src="{% static 'signup.jpg' %}" alt="Random Image" class="card-img-top" style="width: 100%; height: auto;">
+                            </div>
+                        </div>
+                        
+                    </div>
                 </div>
             </div>
         </div>
