--- a/PortfolioBuilder/templates/get_details_form.html
+++ b/PortfolioBuilder/templates/get_details_form.html
@@ -1,47 +1,44 @@
-{%extends 'base.html' %}
-{%load static %}
-{%block title%}
+{% extends 'base.html' %}
+{% load static %}
+{% block title %}
 Provide your details
-{%endblock title%}
-{%block content%}
-<link rel="stylesheet"href="{% static 'home.css' %}"></link>
-  <div class="container">
-    <div class="row">
-        <div class="col-md-6">
-            <h2 class="mb-4">Provide your details</h2>
-            <form method="POST" enctype="multipart/form-data">
-                {% csrf_token %}
-                <div class="row mb-3">
-                    <div class="mb-3">
-                        <input type="text" class="form-control" name="name" maxlength="50" required id="id_name" placeholder="Name">
-                    </div>
-                    <div class="col">
-                        <input type="email" name="email" maxlength="254" class="form-control" required id="id_email" placeholder="Email">
-                    </div>
-                </div>
-                <div class="mb-3">
-                    <input type="tel" class="form-control" placeholder="Your mobile no."name="mobile_no">
-                </div>
-                <div class="mb-3">
-                    <input type="text" class="form-control" placeholder="Your profession"name="profession">
-                </div>
-                <div class="mb-3">
-                    <input type="text" name="place" class="form-control" placeholder="Your current City" maxlength="50" required id="id_place">
-                </div>
-                <div class="mb-3">
-                    <textarea name="about" id="id_about"class="form-control" placeholder="Write about yourself"></textarea>
-                </div>
-                <div class="mb-3">
-                    <label for="fileInput" class="form-label">Choose a profile picture</label>
-                    <input type="file" name="profile_picture" accept="image/*" required id="id_profile_picture" class="form-control">
-                  </div><br>       
-               <button type="submit" value="save"class="btn btn-primary btn-lg my-1 mx-1">Save and continue</button>
-               <a href="{%url 'Home:user_portfolios'%}"><button type="button" class="btn btn-primary mx-2">Your portfolios</button></a>
-            </form>
+{% endblock title %}
+{% block content %}
+<link rel="stylesheet" href="{% static 'home.css' %}"></link>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <h2 class="text-center mb-4">Provide your details</h2>
+      <form method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        <div class="mb-3">
+          <input type="text" class="form-control" name="name" maxlength="50" required id="id_name" placeholder="Name">
         </div>
-        <div class="col-md-6">
-            <img src="{%static 'img2.png' %}" alt="Image" class="img-fluid">
+        <div class="mb-3">
+          <input type="email" name="email" maxlength="254" class="form-control" required id="id_email" placeholder="Email">
         </div>
+        <div class="mb-3">
+          <input type="tel" class="form-control" placeholder="Your mobile no." name="mobile_no">
+        </div>
+        <div class="mb-3">
+          <input type="text" class="form-control" placeholder="Your profession" name="profession">
+        </div>
+        <div class="mb-3">
+          <input type="text" name="place" class="form-control" placeholder="Your current City" maxlength="50" required id="id_place">
+        </div>
+        <div class="mb-3">
+          <textarea name="about" id="id_about" class="form-control" placeholder="Write about yourself"></textarea>
+        </div>
+        <div class="mb-3">
+          <label for="fileInput" class="form-label">Choose a profile picture</label>
+          <input type="file" name="profile_picture" accept="image/*" required id="id_profile_picture" class="form-control">
+        </div><br>       
+        <div class="text-center">
+          <button type="submit" value="save" class="btn btn-primary btn-lg my-1 mx-3">Save and continue</button>
+          <a href="{% url 'Home:user_portfolios' %}"><button type="button" class="btn btn-primary mx-auto">Your portfolios</button></a>
+        </div>
+      </form>
     </div>
+  </div>
 </div>
-{%endblock content%}
+{% endblock content %}
