--- a/PortfolioBuilder/templates/education_details.html
+++ b/PortfolioBuilder/templates/education_details.html
@@ -12,7 +12,8 @@ Skills Details
 
     <table class="table table-bordered table-hover custom-table">
         <tr>
-            <th>Education</th>
+            <th>College Name</th>
+            <th>Course Name</th>
             <th>Course Name</th>
         </tr>
         
@@ -21,6 +22,9 @@ Skills Details
             <td>{{ education.board_or_univ }}</td>
             <td>
             {{ education.board_or_univ }}
+            </td>
+            <td>
+            {{ education.course }}
             </td>
         </tr>
         
