--- a/PortfolioBuilder/templates/account/login.html
+++ b/PortfolioBuilder/templates/account/login.html
@@ -4,37 +4,47 @@
 {% load static %}
 
 {% block content %}
-<div class="container">
-    <link rel="stylesheet" href="{% static 'home.css' %}">
-    <div class="row">
-        <div class="col-md-8 offset-md-2 mt-0x"> <!-- Increase the width of the column -->
-            <div style="box-shadow: 0 0 15px rgba(0, 0, 0, 0.2); padding: 20px;">
-                <div class="row">
-                    <div class="col-md-6">
-                        <h1 class="text-2xl my-4 text-center">Sign up</h1>
-                        <form method="POST">
-                            {% csrf_token %}
-                            {{ form|crispy }}
-                            <div class="text-center">
-                                <div class="d-grid gap-2 col-8 mx-auto"> <!-- Increase the col value to adjust the form width -->
-                                    <button type="submit" class="btn btn-signup">Sign up</button>
+    <div class="container">
+        <link rel="stylesheet" href="{% static 'home.css' %}">
+        <div class="row">
+            <div class="col-md-8 offset-md-2 mt-0x">
+                <div style="box-shadow: 0 0 15px rgba(0, 0, 0, 0.2); padding: 20px;">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h1 class="text-2xl my-4 text-center">Sign up</h1>
+                            <form method="POST">
+                                {% csrf_token %}
+                                {{ form|crispy }}
+                                <div class="text-center">
+                                    <div class="d-grid gap-2 col-8 mx-auto">
+                                        <button type="submit" class="btn btn-signup">Sign up</button>
+                                    </div>
+                                    <div class="or-divider my-3">
+                                        <span class="or-text">or</span>
+                                    </div>
+                                    <a href="{% provider_login_url 'google' %}" class="btn btn-google">
+                                        <img src="{% static 'google_logo.png' %}" alt="Google Logo" class="btn-google-icon">
+                                        Sign up with Google
+                                    </a>
                                 </div>
-                                <div class="or-divider my-3">
-                                    <span class="or-text">or</span>
-                                </div>
-                                <a href="{% provider_login_url 'google' %}" class="btn btn-google">
-                                    <img src="{% static 'google_logo.png' %}" alt="Google Logo" class="btn-google-icon">
-                                    Sign up with Google
-                                </a>
+                            </form>
+                        </div>
+                        <div class="col-md-6 d-flex align-items-center justify-content-center">
+                            <div class="image-container">
+                                <img src="{% static 'signin.jpg' %}" alt="Image" class="img-fluid">
                             </div>
-                        </form>
-                    </div>
-                    <div class="col-md-6 d-flex align-items-center justify-content-center">
-                        <img src="{% static 'signin.jpg' %}" alt="Image" class="img-fluid" style="width: 100%;"> <!-- Set the width of the image to 100% -->
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+
+    <style>
+        @media only screen and (max-width: 767px) {
+            .image-container {
+                display: none;
+            }
+        }
+    </style>
 {% endblock content %}
