--- a/PortfolioBuilder/templates/add_skills_form.html
+++ b/PortfolioBuilder/templates/add_skills_form.html
@@ -57,8 +57,8 @@
                         <div class="row justify-content-center">
                             <div class="col-md-12 text-center">
                                 <div class="btn-group" role="group" aria-label="Buttons">
-                                    <input class="btn btn-primary mx-2" type="submit" value="Save and Continue">
-                                    <a href="{% url 'Home:skill_details_page' slug %}" class="btn btn-primary mx-2">Check Skills You Have Added</a>
+                                    <input class="btn btn-primary mx-2" type="submit" value="Save">
+                                    <a href="{% url 'Home:skill_details_page' slug %}" class="btn btn-primary mx-2">View skills</a>
                                 </div>
                             </div>
                         </div>
