added backend for portfolio generation.

--- a/PortfolioBuilder/templates/project_details.html
+++ b/PortfolioBuilder/templates/project_details.html
@@ -34,7 +34,7 @@ Experience Details
 
     <div class="text-center mt-3">
         <a href="{% url 'Home:add_project_form' slug %}" class="btn btn-primary mx-2">Add project</a>
-        <a href="{% url 'Home:add_project_form' slug %}" class="btn btn-primary mx-2">Create portfolio</a>
+        <a href="{% url 'Home:create_portfolio' slug %}" class="btn btn-primary mx-2">Create portfolio</a>
     </div>
 </div>
 {% endblock %}
