--- a/PortfolioBuilder/templates/navbar.html
+++ b/PortfolioBuilder/templates/navbar.html
@@ -1,42 +1,49 @@
-{%load static%}
+{% load static %}
 
-<nav class="navbar navbar-expand-lg navbar-light ">
-  <link rel="stylesheet"href="{% static 'navbar.css' %}"></link>
+<nav class="navbar navbar-expand-lg navbar-light">
+  <link rel="stylesheet" href="{% static 'navbar.css' %}">
   <div class="container">
-    <a class="navbar-brand" href="#">Portify</a>
+    <div class="d-flex align-items-center">
+      <a class="navbar-brand" href="#">
+        <img src="{% static 'logo.png' %}" alt="Logo" style="height: 80px; width: auto;">
+      </a>
+      <h1 class="navbar-brand mb-0">Portify</h1>
+    </div>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      <!-- TESTING -->
-      {% if user.is_authenticated %}
-      <a class="navbar-brand" href="{% url 'Home:home' %}"><b>Hi, {{user.get_username}}</b></a>
-      {% else %}
-      <a class="navbar-brand" href="{% url 'Home:home' %}">Home</a>
-      <a class="navbar-brand" href="{% url 'Home:home' %}">About</a>
-      <a class="navbar-brand" href="{% url 'Home:home' %}">Contact</a>
-      {% endif %}
-      </ul>
-      <form class="d-flex">
+        <!-- TESTING -->
         {% if user.is_authenticated %}
-
-      <li class="nav">
-        <!-- <a class="btn btn-outline-light" href="{% url 'account_logout' %}">Logout</a> -->
-         <a href="{% url 'account_logout' %}" class="btn btn-primary btn-sm mx-3">Log out</a> 
-        {% comment %} <a href="{%url 'account_logout' %}"><button class="btn btn-primary btn-sm mx-3">Log out</button></a> {% endcomment %}
-      </li>
-      <li class="nav">
-        <!-- <a class="btn btn-outline-light" href="{% url 'account_change_password' %}">Password change</a> -->
-        <a href="{%url 'account_change_password' %}"><button type="button" class="btn btn-primary btn-sm mx-3">Change password</button></a>
-      </li>
-      {% else %}
-        
-        <a href="{%url 'account_signup' %}"><button type="button" class="btn btn-primary btn-sm mx-3">Sign up</button></a>
-
-        <a href="{%url 'account_login' %}"><button type="button" class="btn btn-primary btn-sm">Sign in</button></a>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'Home:home' %}"><b>Hi, {{ user.get_username }}</b></a>
+        </li>
+        {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'Home:home' %}">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'Home:home' %}">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'Home:home' %}">Contact</a>
+        </li>
         {% endif %}
-      </form>
+      </ul>
+      <div class="ml-auto">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            {% if user.is_authenticated %}
+            <a href="{% url 'account_logout' %}" class="btn btn-primary btn-sm mx-3">Log out</a> 
+            <a href="{% url 'account_change_password' %}" class="btn btn-primary btn-sm mx-3">Change password</a>
+            {% else %}
+            <a href="{% url 'account_signup' %}" class="btn btn-primary btn-sm mx-3">Sign up</a>
+            <a href="{% url 'account_login' %}" class="btn btn-primary btn-sm">Sign in</a>
+            {% endif %}
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
-</nav>  
+</nav>
