changed the title for different pages

--- a/PortfolioBuilder/templates/add_skills_form.html
+++ b/PortfolioBuilder/templates/add_skills_form.html
@@ -2,8 +2,8 @@
 {% load static %}
 
 {% block title %}
-    Skill Form
-{% endblock %}
+    Add skill 
+{% endblock title%}
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'add_skill.css' %}"></link>
