--- a/PortfolioBuilder/templates/change_info.html
+++ b/PortfolioBuilder/templates/change_info.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 
 {% load static %}
-
+{%block title%}
+Update details 
+{%endblock title%}
 {% block content %}
 <link rel="stylesheet" href="{% static 'home.css' %}">
 <div class="container"style="padding-bottom:5rem; margin-top: -60px;">
