--- a/PortfolioBuilder/templates/details_page.html
+++ b/PortfolioBuilder/templates/details_page.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load thumbnail %}
+{%block title%}
+Details 
+{%endblock title%}
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'home.css' %}">
