--- a/PortfolioBuilder/templates/project_details.html
+++ b/PortfolioBuilder/templates/project_details.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}
-Experience Details
+Project details
 {% endblock %}
 
 {% block content %}
