--- a/PortfolioBuilder/templates/education_details.html
+++ b/PortfolioBuilder/templates/education_details.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}
-Skills Details
+Education details
 {% endblock %}
 
 {% block content %}
