improved UI of skills part in portfolio.html

--- a/PortfolioBuilder/templates/get_details_form.html
+++ b/PortfolioBuilder/templates/get_details_form.html
@@ -12,6 +12,33 @@ Provide your details
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         padding: 20px;
     }
+    {% comment %} body {
+        background: linear-gradient(to bottom, #8c50a8, #672d75); /* Gradient colors */
+        background-attachment: fixed;
+        background-size: cover;
+        margin: 0;
+        padding: 0;
+    }
+
+    .navbar {
+        background-color: white; /* Set your navbar background color here */
+    }
+
+    .form-container {
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        padding: 20px;
+        background-color: rgba(255, 255, 255, 0.8); /* Adjust the opacity or use a different color for the form container */
+    }
+
+    @media (max-width: 767px) {
+        body {
+            background: #8c50a8; /* Fallback color for mobile devices */
+        }
+
+        .form-container {
+            background-color: rgba(255, 255, 255, 0.9); /* Adjust the opacity or use a different color for the form container in mobile view */
+        }
+    } {% endcomment %}
 </style>
 
 <div class="container">
