--- a/PortfolioBuilder/static/portfolio.css
+++ b/PortfolioBuilder/static/portfolio.css
@@ -703,65 +703,64 @@ textarea {
     opacity: 0;
     top: 27px; } }
     .skills-container {
-      display: flex;
-      flex-wrap: wrap;
-    }
-    
-    .card {
-      display: flex;
-      align-items: center;
-      width: 100%;
-      margin-bottom: 10px;
-    }
-    
-    .card__skill {
-      flex: 1;
-      margin-right: 10px;
-      text-align: right;
-    }
-    
-    .card__progress {
-      flex: 3;
-      height: 16px;
-      /* background-color: white; */
-      position: relative;
-      overflow: hidden;
-      border-radius: 15px;
-      border: 1px solid green;
-      overflow: hidden;
-    }
-    
-    .progress-bar {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      background-color: green;
-      overflow: hidden;
-      
-      
-      
-    }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 800px;
+  margin: 0 auto; /* Center the container */
+  margin-top: 30px;
+}
 
-  
-    
-    @keyframes progressBarAnimation {
-      from {
-        width: 0;
-      }
-    }
-    
+.card {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 10px; /* Add padding for spacing */
+  background-color: #f5f5f5;  
+}
+
+.card__skill {
+  flex: 1;
+  margin-right: 10px;
+  text-align: right;
+}
+
+.card__progress {
+  flex: 3;
+  height: 16px;
+  position: relative;
+  overflow: hidden;
+  border-radius: 15px;
+  border: 1px solid green;
+  overflow: hidden;
+}
+
+.progress-bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background-color: green;
+  overflow: hidden;
+  animation: progressBarAnimation 1s ease-in-out; /* Add animation */
+}
+
+@keyframes progressBarAnimation {
+  from {
+    width: 0;
+  }
+}
+
+.card__percent {
+  flex: 1;
+  margin-left: 10px;
+  text-align: left;
+}
+
+  @media (max-width: 768px) {
+    .card__skill,
     .card__percent {
-      flex: 1;
-      margin-left: 10px;
-      text-align: left;
+      text-align: center;
     }
-    
-    @media (max-width: 768px) {
-      .card__skill,
-      .card__percent {
-        flex: 1;
-        text-align: center;
-      }
-    }
-    
+  }
